crates/lang/tests/ui/contract/fail/message-input-non-codec.stderr
error[E0277]: the trait bound `NonCodecType: WrapperTypeDecode` is not satisfied
  --> tests/ui/contract/fail/message-input-non-codec.rs:18:31
   |
18 |         pub fn message(&self, _input: NonCodecType) {}
   |                               ^^^^^^^^^^^^^^^^^^^^ the trait `WrapperTypeDecode` is not implemented for `NonCodecType`
   |
   = note: required because of the requirements on the impl of `parity_scale_codec::Decode` for `NonCodecType`
note: required by a bound in `DispatchInput`
  --> src/codegen/dispatch/type_check.rs:41:8
   |
41 |     T: scale::Decode + 'static;
   |        ^^^^^^^^^^^^^ required by this bound in `DispatchInput`

error[E0277]: the trait bound `NonCodecType: WrapperTypeDecode` is not satisfied
   --> tests/ui/contract/fail/message-input-non-codec.rs:18:9
    |
18  |         pub fn message(&self, _input: NonCodecType) {}
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `WrapperTypeDecode` is not implemented for `NonCodecType`
    |
    = note: required because of the requirements on the impl of `parity_scale_codec::Decode` for `NonCodecType`
note: required by a bound in `parity_scale_codec::Decode::decode`
   --> $CARGO/parity-scale-codec-2.3.1/src/codec.rs
    |
    |     fn decode<I: Input>(input: &mut I) -> Result<Self, Error>;
    |               ^ required by this bound in `parity_scale_codec::Decode::decode`

error[E0277]: the trait bound `NonCodecType: WrapperTypeEncode` is not satisfied
  --> tests/ui/contract/fail/message-input-non-codec.rs:3:1
   |
3  | #[ink::contract]
   | ^^^^^^^^^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `NonCodecType`
...
18 |         pub fn message(&self, _input: NonCodecType) {}
   |         ---------------------------------------------- required by a bound introduced by this call
   |
   = note: required because of the requirements on the impl of `Encode` for `NonCodecType`
   = note: this error originates in the attribute macro `ink::contract` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `fire` exists for struct `ink_env::call::CallBuilder<DefaultEnvironment, Set<ink_env::AccountId>, Unset<u64>, Unset<u128>, Set<ExecutionInput<ArgumentList<ink_env::call::utils::Argument<NonCodecType>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>>>, Set<()>>`, but its trait bounds were not satisfied
  --> tests/ui/contract/fail/message-input-non-codec.rs:18:9
   |
18 |         pub fn message(&self, _input: NonCodecType) {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method cannot be called on `ink_env::call::CallBuilder<DefaultEnvironment, Set<ink_env::AccountId>, Unset<u64>, Unset<u128>, Set<ExecutionInput<ArgumentList<ink_env::call::utils::Argument<NonCodecType>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>>>, Set<()>>` due to unsatisfied trait bounds
   |
  ::: $WORKSPACE/crates/env/src/call/execution_input.rs
   |
   | pub struct ArgumentList<Head, Rest> {
   | ----------------------------------- doesn't satisfy `_: Encode`
   |
   = note: the following trait bounds were not satisfied:
           `ArgumentList<ink_env::call::utils::Argument<NonCodecType>, ArgumentList<ArgumentListEnd, ArgumentListEnd>>: Encode`
